Changelog
=========

0.4 (unreleased)
----------------

- Nothing changed yet.


0.3 (2011-01-31)
----------------

- Added ``renaming.rename_remove_accentuation`` and ``console.renremoveacc`` -- and its 
  corresponding console script entry-point.

0.2 (2010-08-18)
----------------

- Fixed bad ``setup.py``.


0.1 (2010-08-15)
----------------

- Initial release
